Updated classes to include activities and compressibility factors

--- a/DistE-ver2.ipynb
+++ b/DistE-ver2.ipynb
@@ -620,7 +620,7 @@
     "    N = -36.50624\n",
     "    O = -0.007374\n",
     "    \n",
-    "    CpO2G = (K + L*Tref + M*Tref**2 + N*Tref**3 + O/Tref**2)/MO2;\n",
+    "    CpO2G = (K + L*Tref + M*Tref**2 + N*Tref**3 + O/Tref**2)/MO2\n",
     "    \n",
     "    return [CpH2OG, CpH2O2G, CpO2G] # Returned as J/(g*K)"
    ]
